<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cadastrarPet"
            android:icon="@drawable/ic_pets"
            android:title="@string/menu_cadastrarPet" />
        <item
            android:id="@+id/nav_localizacao"
            android:icon="@drawable/ic_my_location_black_24dp"
            android:title="@string/menu_localizacao" />
        <item
            android:id="@+id/nav_configuracao"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/menu_configuracao" />

    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_contato" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_sobre" />
        </menu>
    </item>

</menu>
