<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.example.lost_pets_oficial.activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cadastrarPet"
        android:name="com.example.lost_pets_oficial.activity.ui.gallery.GalleryFragment"
        android:label="@string/menu_cadastrarPet"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_localizacao"
        android:name="com.example.lost_pets_oficial.activity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_localizacao"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_configuracao"
        android:name="com.example.lost_pets_oficial.activity.ui.tools.ToolsFragment"
        android:label="@string/menu_configuracao"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_contato"
        android:name="com.example.lost_pets_oficial.activity.ui.share.ShareFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.example.lost_pets_oficial.activity.ui.send.SendFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_send" />
</navigation>